--- a/app/index.html
+++ b/app/index.html
@@ -1,49 +1,358 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="app.css">
-</head>
-<body>
+    <link rel="stylesheet" href="app.css" />
+  </head>
+  <body>
     <section class="hero">
-        <div class="overlay"></div>
-        <nav class="navbar">
-            <ul class="nav-links">
-                <li>
-                    <a href="#">Home</a>
-                </li>
-                <li>
-                    <a href="#">Product</a>
-                </li>
-                <li>
-                    <a href="#">Pricing</a>
-                </li>
-                <li>
-                    <a href="#">About</a>
-                </li>
-            </ul>
-            <div class="logo">FIGMA LAND</div>
-            <div class="social-icons">
-                <a href="#">T</a>
-                <a href="#">T</a>
-                <a href="#">T</a>
-            </div>
-        </nav>
-        <div class="hero-content">
-            <h1>The best products <br> start with Figma</h1>
-            <p>Most calendars are designed for teams. Slate is designed <br> for freelancers</p>
-            <button class="try-btn">Try for Free</button>
+      <div class="overlay"></div>
+      <nav class="navbar">
+        <ul class="nav-links">
+          <li>
+            <a href="#">Home</a>
+          </li>
+          <li>
+            <a href="#">Product</a>
+          </li>
+          <li>
+            <a href="#">Pricing</a>
+          </li>
+          <li>
+            <a href="#">About</a>
+          </li>
+        </ul>
+        <div class="logo">FIGMA LAND</div>
+        <div class="social-icons">
+          <a href="#">T</a>
+          <a href="#">T</a>
+          <a href="#">T</a>
         </div>
-        <div class="angled-bg"></div>
+      </nav>
+      <div class="hero-content">
+        <h1>
+          The best products <br />
+          start with Figma
+        </h1>
+        <p>
+          Most calendars are designed for teams. Slate is designed <br />
+          for freelancers
+        </p>
+        <button class="try-btn">Try for Free</button>
+      </div>
+      <div class="angled-bg"></div>
     </section>
-    <div class="features">features</div>
-    <div class="mid-section">mid</div>
-    <div class="partners">partners</div>
-    <div class="pricing">pricing</div>
-    <div class="contact">contact</div>
-    <div class="footer">footer</div>
+    <section class="features-section">
+      <h2>Features</h2>
+      <p class="subtitle">
+        Most calendars are designed for teams.<br />Slate is designed for
+        freelancers
+      </p>
+      <div class="features-grid">
+        <div class="feature-box">
+          <div class="icon blue-square"></div>
+          <h4>OpenType features<br />Variable fonts</h4>
+          <p>
+            Slate helps you see how many more days you need to work to reach
+            your financial goal.
+          </p>
+        </div>
+        <div class="feature-box">
+          <div class="icon checkmark"></div>
+          <h4>Design with real data</h4>
+          <p>
+            Slate helps you see how many more days you need to work to reach
+            your financial goal.
+          </p>
+        </div>
+        <div class="feature-box">
+          <div class="icon pencil"></div>
+          <h4>Fastest way to<br />take action</h4>
+          <p>
+            Slate helps you see how many more days you need to work to reach
+            your financial goal.
+          </p>
+        </div>
+      </div>
+    </section>
+    <section class="video-feature-section">
+      <div class="video-preview">
+        <img src="/assets/Image (6).jfif" alt="Preview" class="preview-img" />
+        <div class="play-button">&#9658;</div>
+      </div>
+      <div class="feature-layout">
+        <div class="text-content">
+          <h3>
+            Fastest way to <br />
+            organize
+          </h3>
+          <p>
+            Most calendars are designed for teams.<br />Slate is designed for
+            freelancers
+          </p>
+          <button class="cta-btn">Try for Free</button>
+        </div>
+        <div class="image-content">
+          <img
+            src="/assets/Image (9).png"
+            alt="App preview"
+            class="device-img"
+          />
+        </div>
+      </div>
+    </section>
+    <section class="cta-section">
+      <div class="cta-wrapper">
+        <div class="cta-image">
+          <img src="/assets/Image (10).png" alt="Newsletter Illustration" />
+        </div>
+        <div class="cta-text">
+          <small>At your fingertips</small>
+          <h2>Lightning fast prototyping</h2>
+          <span class="sub"> Subscribe to our Newsletter </span>
+          <p>Available exclusively on Figmaland</p>
+          <form class="cta-form">
+            <input type="email" placeholder="Your Email" />
+            <button type="submit">Subscribe</button>
+          </form>
+        </div>
+      </div>
+    </section>
+    <section class="partners-section">
+      <h2>Partners</h2>
+      <p>
+        Most calendars are designed for teams.<br />Slate is designed for
+        freelancers
+      </p>
+      <div class="partners-grid">
+        <div class="partner-card">
+          <span class="label">Client Name</span>
+          <img src="google-logo.png" alt="Google" />
+        </div>
+        <div class="partner-card">
+          <span class="label">Client Name</span>
+          <img src="amazon-logo.png" alt="Amazon" />
+        </div>
+        <div class="partner-card">
+          <span class="label">Client Name</span>
+          <img src="microsoft-logo.png" alt="Microsoft" />
+        </div>
+        <div class="partner-card">
+          <span class="label">Client Name</span>
+          <img src="uber-logo.png" alt="Uber" />
+        </div>
+        <div class="partner-card">
+          <span class="label">Client Name</span>
+          <img src="dropbox-logo.png" alt="Dropbox" />
+        </div>
+        <div class="partner-card">
+          <span class="label">Client Name</span>
+          <img src="google-logo.png" alt="Google" />
+        </div>
+        <div class="partner-card">
+          <span class="label">Client Name</span>
+          <img src="uber-logo.png" alt="Uber" />
+        </div>
+        <div class="partner-card">
+          <span class="label">Client Name</span>
+          <img src="amazon-logo.png" alt="Amazon" />
+        </div>
+      </div>
+      <button class="try-btn">Try for Free</button>
+    </section>
+    <section class="testimonial-section">
+      <h2>Testimonials</h2>
+      <img src="/assets/Image (7).jfif" alt="IBM" class="testimonial-logo" />
+      <p class="testimonial-text">
+        Most calendars are designed for teams. Slate is designed for
+        freelancers<br />
+        who want a simple way to plan their schedule.
+      </p>
+      <div class="testimonial-user">
+        <img src="user-avatar.jpg" alt="User" class="user-avatar" />
+        <div class="user-info">
+          <h4>John Doe</h4>
+          <span>Ui designer</span>
+        </div>
+      </div>
+      <div class="testimonial-dots">
+        <span class="dot active"></span>
+        <span class="dot"></span>
+        <span class="dot"></span>
+      </div>
+    </section>
+    <section class="pricing-section">
+      <h2>Pricing</h2>
+      <p class="subtitle">
+        Most calendars are designed for teams.<br />Slate is designed for
+        freelancers
+      </p>
+      <div class="pricing-cards">
+        <!-- Free Plan -->
+        <div class="card">
+          <h3>FREE</h3>
+          <p>
+            Organize across all <br />
+            apps by hand
+          </p>
+          <div class="price">
+            <p class="rate">0</p>
+            <div class="dollar">
+              <p class="dollar-symbol">$</p>
+              <p>Per Month</p>
+            </div>
+          </div>
+          <ul>
+            <li>Pricing Feature</li>
+            <li>Pricing Feature</li>
+            <li>Pricing Feature</li>
+            <li>Pricing Feature</li>
+            <li>Pricing Feature</li>
+          </ul>
+          <button>Order Now</button>
+        </div>
+        <!-- Standard Plan -->
+        <div class="card active">
+          <h3>STANDARD</h3>
+          <p>
+            Organize across all <br />
+            apps by hand
+          </p>
+          <div class="price">
+            <p class="rate">10</p>
+            <div class="dollar">
+              <p class="dollar-symbol">$</p>
+              <p>Per Month</p>
+            </div>
+          </div>
+          <ul>
+            <li>Pricing Feature</li>
+            <li>Pricing Feature</li>
+            <li>Pricing Feature</li>
+            <li>Pricing Feature</li>
+            <li>Pricing Feature</li>
+          </ul>
+          <button>Order Now</button>
+        </div>
+        <!-- Business Plan -->
+        <div class="card">
+          <h3>BUSINESS</h3>
+          <p>
+            Organize across all <br />
+            apps by hand
+          </p>
+          <div class="price">
+            <p class="rate">99</p>
+            <div class="dollar">
+              <p class="dollar-symbol">$</p>
+              <p>Per Month</p>
+            </div>
+          </div>
+          <ul>
+            <li>Pricing Feature</li>
+            <li>Pricing Feature</li>
+            <li>Pricing Feature</li>
+            <li>Pricing Feature</li>
+            <li>Pricing Feature</li>
+          </ul>
+          <button>Order Now</button>
+        </div>
+      </div>
+    </section>
+    <section class="contact-section">
+      <h2>Contact Us</h2>
+      <p class="subtitle">
+        Most calendars are designed for teams.<br />Slate is designed for
+        freelancers
+      </p>
+      <div class="contact-container">
+        <!-- Contact Form -->
+        <div class="contact-form">
+          <h3>Contact Us</h3>
+          <form>
+            <input type="text" placeholder="Your Name" />
+            <input type="email" placeholder="Your Email" />
+            <textarea placeholder="Your Message"></textarea>
+            <button type="submit">Send</button>
+          </form>
+        </div>
+        <!-- Contact Info + Map -->
+        <div class="contact-details">
+          <div class="info">
+            <div>
+              <i class="icon">📍</i>
+              <p>
+                6386 Spring St undefined Anchorage,<br> Georgia 12473 United States
+              </p>
+            </div>
+            <div>
+                <i class="icon">📞</i>
+                <p>(843) 555-0130</p>
+            </div>
+            <div>
+                <i class="icon">✉️</i>
+                <p>wilie.jennings@example.com</p>
+            </div>
+          </div>
+          <div class="map-container">
+              <div class="map-div">
+    
+                  <img src="/assets/Image (11).png" alt="Map" class="map" />
+              </div>
+          </div>
+          <div class="social-icons">
+            <a href="#"><i class="icon">🐦</i></a>
+            <a href="#"><i class="icon">📘</i></a>
+            <a href="#"><i class="icon">💼</i></a>
+          </div>
+        </div>
+      </div>
+    </section>
+    <footer class="footer">
+        <div class="footer-container">
+        <div class="footer-column">
+        <h4>Pages</h4>
+        <ul>
+        <li>Home</li>
+        <li>Features</li>
+        <li>Partners</li>
+        <li>Pricing</li>
+        <li>Contact</li>
+        </ul>
+        </div>
+        <div class="footer-column">
+        <h4>Tomothy</h4>
+        <ul>
+        <li>Eleanor Edwards</li>
+        <li>Ted Robertson</li>
+        <li>Annette Russell</li>
+        <li>Jamie McKinney</li>
+        <li>Gloria Richards</li>
+        </ul>
+        </div>
+        <div class="footer-column">
+        <h4>Jane Black</h4>
+        <ul>
+        <li>Philip James</li>
+        <li>Product</li>
+        <li>Colleen Russell</li>
+        <li>Marvin Hawkins</li>
+        <li>Bruce Simmmons</li>
+        </ul>
+        </div>
+        <div class="footer-column contact-info">
+        <p><i class="icon">📍</i> 7480 Mockingbird Hill</p>
+        <p><i class="icon">📞</i> (239) 555-0108</p>
+        <div class="social-icons">
+        <a href="#"><i class="icon">🐦</i></a>
+        <a href="#"><i class="icon">📘</i></a>
+        <a href="#"><i class="icon">💼</i></a>
+        </div>
+        </div>
+        </div>
+        </footer>
     <script src="app.js"></script>
-</body>
+  </body>
 </html>
